--- a/movies/templates/movies/edit-modal.html
+++ b/movies/templates/movies/edit-modal.html
@@ -14,7 +14,7 @@
                 <!-- --== Group ==-- -->
                 <div class="form-group">
                     <label for="editName">Name</label>
-                    <input id="editName" type="text" class="form-control" placeholder="Enter name" name="name" value="{{movie.fields.Name}}" />
+                    <input id="editName" type="text" class="form-control" placeholder="Enter name" name="name" value="{{movie.fields.Name}}" required/>
                 </div>
 
                 <!-- --== Group ==-- -->
@@ -26,7 +26,7 @@
                 <!-- --== Group ==-- -->
                 <div class="form-group">
                     <label for="editRating">Rating</label>
-                    <input id="editRating" type="number" class="form-control" placeholder="1-10" name="rating" value={{movie.fields.Rating}} />
+                    <input id="editRating" type="number" class="form-control" placeholder="1-10" name="rating" value={{movie.fields.Rating}} required/>
                 </div>
 
                 <!-- --== Group ==-- -->
