--- a/movies/static/movies/app.css
+++ b/movies/static/movies/app.css
@@ -114,6 +114,11 @@ body{
     color: white;
 }
 
+.flex-shrink-0{
+     background-image: linear-gradient(#1E1E1E 0%, #000 100%);
+     min-height:84%;
+}
+
 .main {
     background: #202020;
     /* fallback for old browsers */
@@ -121,7 +126,7 @@ body{
 }
 
 .result {
-    background-image: linear-gradient(#1E1E1E 0%, #000 100%);
+
     height: auto;
 }
 
@@ -129,7 +134,6 @@ body{
     border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
-    min-height: 100vh;
 }
 
 
@@ -146,8 +150,8 @@ body{
 }
 
 .movies__item-title {
-    border-right: 1px solid #eee;
-    border-left: 1px solid #eee;
+    /*border-right: 1px solid #eee;
+    border-left: 1px solid #eee;*/
     color: black;
 	background: white;
     text-align: center;
@@ -155,6 +159,20 @@ body{
     font-family: Anton;
     margin-top: -3px;
 }
+
+.movies__view__item-title-wrapper{
+    color: black;
+	background: white;
+    text-align: center;
+    padding: 1rem 1rem 0 1rem;
+    font-family: Anton;
+    margin-top: -3px;
+}
+
+p.movies__view__item-title {
+    margin-bottom: 0 !important;
+}
+
 
 .movies__item-image {
     transition: all 0.2s ease;
@@ -245,6 +263,12 @@ img.movies.item-image{
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.alert-warning,
+.alert-danger,
+.alert-success{
+    z-index:3333 !important;
 }
 
 @media only screen and (max-width: 1224px) {
