--- a/movies/templates/movies/create-modal.html
+++ b/movies/templates/movies/create-modal.html
@@ -13,7 +13,7 @@
             <div class="modal-body">
                 <div class="form-group">
         			<label for="movieName">Name</label>
-                	<input type="text" class="form-control" id="movieName" placeholder="Enter Name" name="name" />
+                	<input type="text" class="form-control" id="movieName" placeholder="Enter Name" name="name" required />
                 </div>
 
 				<div class="form-group">
@@ -23,7 +23,7 @@
 
 				<div class="form-group">
         			<label for="movieRating">Rating</label>
-                	<input type="number" class="form-control" id="movieRating" placeholder="1-20"  name="rating" min="1" max="10" />
+                	<input type="number" class="form-control" id="movieRating" placeholder="1-20"  name="rating" min="1" max="10" required/>
                 </div>
 
 				<div class="form-group">
